--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: swift
+language: objective-c
 osx_image: xcode7.3
 
 script:
-- xcodebuild -project SwiftInjection.xcodeproj -scheme SwiftInjectionTests  test
+- xcodebuild -project SwiftInjection.xcodeproj -scheme SwiftInjectionTests -destination 'platform=iOS Simulator,name=iPhone 6' test
